added mobile navbar

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,30 @@
-{{!--Mobile UI Begin--}}
-{{!--Header--}}
-<div class="">
-    <div class="">
-        <img src="" alt="Pulse" />
+{{!--Mobile UI Begin--}} 
+{{!--Navbar--}}
+<div id="offcanvas-full-screen" class="offcanvas-full-screen" data-off-canvas data-transition="overlap">
+    <div class="offcanvas-full-screen-inner">
+        <button class="offcanvas-full-screen-close" aria-label="Close menu" type="button" data-close>
+      <span aria-hidden="true">&times;</span>
+    </button>
+
+        <ul class="offcanvas-full-screen-menu">
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Help</a></li>
+        </ul>
     </div>
 </div>
+
+<div class="off-canvas-content" data-off-canvas-content>
+    <div class="top-bar">
+        <div class="top-bar-title">
+            <strong>Pulse</strong>
+        </div>
+        <div class="top-bar-right">
+            <button class="menu-icon dark" type="button" data-toggle="offcanvas-full-screen"></button>
+        </div>
+    </div>
+</div>
+
 {{!----}}
