added pulse button (not functional yet)

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
 {{!--Mobile UI Begin--}} 
+
 {{!--Navbar--}}
+
 <div id="offcanvas-full-screen" class="offcanvas-full-screen" data-off-canvas data-transition="overlap">
     <div class="offcanvas-full-screen-inner">
         <button class="offcanvas-full-screen-close" aria-label="Close menu" type="button" data-close>
@@ -27,4 +29,10 @@
     </div>
 </div>
 
-{{!----}}
+{{!--end navbar--}}
+
+{{!--pulse button--}}
+
+<button class="button button-rounded-hover">PULSE</button>
+
+{{!--end pulse button--}}
