--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,9 @@
     <script src="https://use.fontawesome.com/97f0d0a6dd.js"></script>
 
 </head>
-
+{{!--import body from index.handlebars--}}
 <body>
-    {{{ body }}}
+    {{{ body }}} 
 </body>
 
 </html>
