--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/plugins/foundation.offcanvas.min.js"></script>
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> {{!--Bringing in fontawesome in order to use their icons--}}
     <script src="https://use.fontawesome.com/97f0d0a6dd.js"></script>
-
+    <script type="text/javascript" src="/assets/js/myapp.js"></script>
 </head>
 
 <body>
