capitalized givenName on main page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -83,7 +83,7 @@
 
   </div>
   <div class="body-info">
-    <h4> Welcome, {{givenName}} </h4>
+    <h4> Welcome, {{capitalize givenName}} </h4>
     {{!--Begin New Activity Button--}}
     <a class="button app-button" href="#">Begin New Activity</a>
     <br> {{!--PULSE BUTTON!!!--}}
