--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,22 @@
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
+    height: 100%;
     /*background-image: url("https://www.toptal.com/designers/subtlepatterns/topography/");*/
     /*background-image: url("../images/topography.png");*/
     /*background-image: url("../images/cream_pixels.png");*/
     background-image: url("../images/greyzz.png");
     /*background-image: url("../images/pw_pattern.png");*/
     /*background-image: url("../images/swirl.png");*/
+}
+
+#wrapper {
+    min-height: 100%;
+    position: relative;
 }
 
 
@@ -254,15 +266,58 @@ body {
 }
 
 
+/*------------------Profile Form------------------*/
+
+.floated-label-wrapper {
+  position: relative;
+}
+
+.floated-label-wrapper label {
+  background: #fefefe;
+  color: #1779ba;
+  font-size: 0.75rem;
+  font-weight: 600;
+  left: 0.75rem;
+  opacity: 0;
+  padding: 0 0.25rem;
+  position: absolute;
+  top: 2rem;
+  transition: all 0.15s ease-in;
+  z-index: -1;
+}
+
+.floated-label-wrapper label input[type=text],
+.floated-label-wrapper label input[type=email],
+.floated-label-wrapper label input[type=password] {
+  border-radius: 4px;
+  font-size: 1.75em;
+  padding: 0.5em;
+}
+
+.floated-label-wrapper label.show {
+  opacity: 1;
+  top: -0.85rem;
+  z-index: 1;
+  transition: all 0.15s ease-in;
+}
+
+#profile-form {
+    margin-bottom: 10px;
+}
+
+
 /*------------------Footer------------------*/
 
 .pulse-footer {
-    display: flex;
+    height: 60px;
+    width: 100%;
     background: #222b31;
     color: rgba(254, 254, 254, 0.6);
     margin-bottom: 0;
     text-align: center;
     padding: 1rem 0 0;
-    bottom: 0;
     position: absolute;
+    left: 0px;
+    bottom: 0px;
+    
 }
