--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,41 +1,43 @@
-{{!--Mobile UI Begin--}}
-{{!--Navbar--}} {{!--
+{{!--Mobile UI Begin--}} {{!--Navbar--}} {{!--
 
 <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>--}} {{!--
 <a href="#" onclick="signOut();">Sign out</a>--}}
 
 <!-- Set up Off-canvas -->
-<div class="multilevel-offcanvas off-canvas position-left" id="offCanvasLeft" data-off-canvas>
+<div id="wrapper">
+  <div class="multilevel-offcanvas off-canvas position-left" id="offCanvasLeft" data-off-canvas>
 
-  <ul class="vertical menu">
-    {{!--
-    <li class="off-canvas-menu-item"><a href="#">Tour</a></li>--}}
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">FAQ</a></li>
-    <li><a href="#">Help</a></li>
-  </ul>
-  <ul class="vertical menu">
-    {{!--<li><a href="#" data-onsuccess="onSignIn">Sign In</a></li> This button is not necessary. If user needs to sign in, they will be redirected to splash page--}}
-    <li><a href="#" onclick="signOut();">Sign Out</a></li>
-  </ul>
-  <ul class="menu simple social-links">
-    <li><a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-    <li><a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-    <li><a href="https://github.com/bspille/pulse" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-    <li><a href="#" target="_blank"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
-  </ul>
-</div>
+    <ul class="vertical menu">
+      {{!--
+      <li class="off-canvas-menu-item"><a href="#">Tour</a></li>--}}
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Profile</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Help</a></li>
+    </ul>
+    <ul class="vertical menu">
+      {{!--
+      <li><a href="#" data-onsuccess="onSignIn">Sign In</a></li> This button is not necessary. If user needs to sign in, they
+      will be redirected to splash page--}}
+      <li><a href="#" data-close="offCanvasLeft" onclick="signOut();">Sign Out</a></li>
+    </ul>
+    <ul class="menu simple social-links">
+      <li><a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+      <li><a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+      <li><a href="https://github.com/bspille/pulse" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+      <li><a href="#" target="_blank"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+    </ul>
+  </div>
 
-<div class="off-canvas-content" data-off-canvas-content>
-  <div class="nav-bar shadow">
-    <div class="nav-bar-left">
-      <ul class="menu">
-        {{!--
-        <li class="hide-for-small-only"><a href="#" onclick="signOut();">Sign Out</a></li>--}}
-        <li>
-          <button class="offcanvas-trigger" type="button" data-open="offCanvasLeft">
+  <div class="off-canvas-content" data-off-canvas-content>
+    <div class="nav-bar shadow">
+      <div class="nav-bar-left">
+        <ul class="menu">
+          {{!--
+          <li class="hide-for-small-only"><a href="#" onclick="signOut();">Sign Out</a></li>--}}
+          <li>
+            <button class="offcanvas-trigger" type="button" data-open="offCanvasLeft">
               <span class="offcanvas-trigger-text hide-for-small-only">Menu</span>
               <div class="hamburger">
                 <span class="line"></span>
@@ -43,37 +45,85 @@
                 <span class="line"></span>
               </div>
             </button>
-        </li>
-        <li>
-          <a class="nav-bar-logo"><img class="logo" src="../assets/images/pulse-logo.png"></a>
-        </li>
-      </ul>
-    </div>
-    {{!--
-    <div class="nav-bar-left">
+          </li>
+          <li>
+            <a class="nav-bar-logo"><img class="logo" src="../assets/images/pulse-logo.png"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-bar-right">
+        <ul class="menu">
+          <li class="hide-for-small-only"><a href="#" class="g-signin2" data-onsuccess="onSignIn"></a></li>
+        </ul>
+      </div>
 
-    </div>--}}
-    <div class="nav-bar-right">
-      <ul class="menu">
-        <li class="hide-for-small-only"><a href="#" class="g-signin2" data-onsuccess="onSignIn"></a></li>
-      </ul>
     </div>
 
   </div>
   <div class="body-info">
-    <!-- <h4> Welcome, {{givenName}} </h4> -->
     <h4 id="welcome"></h4>
     {{!--Begin New Activity Button--}}
     <a class="button app-button" href="#">Begin New Activity</a>
-    <br> {{!--PULSE BUTTON!!!--}}
-    {{!--<button class="button button-rounded-hover"><i class="fa fa-ravelry" aria-hidden="true"></i></button>--}}
+    <br> {{!--PULSE BUTTON!!!--}} {{!--
+    <button class="button button-rounded-hover"><i class="fa fa-ravelry" aria-hidden="true"></i></button>--}}
     <button id="pulse-button" class="button button-rounded-hover"><img src="../assets/images/radio2.png"></button>
   </div>
-</div>
-<div class="columns pulse-footer" data-sticky-container data-stick-to="bottom">
-  <div class="row">
-    <div class="column">
-      <p>© Pulse / All Rights Reserved.</p>
+  {{!--Profile Form--}}
+  <form id="profile-form" class="callout text-center shadow">
+    <h2>Profile Information</h2>
+    <div class="floated-label-wrapper">
+      <label for="full-name">Full name</label>
+      <input type="text" id="full-name" name="full name input" placeholder="Full name">
+    </div>
+    <div class="floated-label-wrapper">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email input" placeholder="Email">
+    </div>
+    <div class="floated-label-wrapper">
+      <label for="pass">PIN</label>
+      <input type="password" id="pass" name="password input" placeholder="PIN">
+    </div>
+    <div class="floated-label-wrapper">
+      <label for="pass">Phone #</label>
+      <input type="password" id="pass" name="password input" placeholder="Phone number">
+    </div>
+    <h2>Contacts</h2>
+    <div class="floated-label-wrapper">
+      <label for="full-name">Full name</label>
+      <input type="text" id="full-name" name="full name input" placeholder="Full name">
+    </div>
+    <div class="floated-label-wrapper">
+      <label for="pass">Phone #</label>
+      <input type="password" id="pass" name="password input" placeholder="Phone number">
+    </div>
+    <br>
+    <div class="floated-label-wrapper">
+      <label for="full-name">Full name</label>
+      <input type="text" id="full-name" name="full name input" placeholder="Full name">
+    </div>
+    <div class="floated-label-wrapper">
+      <label for="pass">Phone #</label>
+      <input type="password" id="pass" name="password input" placeholder="Phone number">
+    </div>
+    <br>
+    <div class="floated-label-wrapper">
+      <label for="full-name">Full name</label>
+      <input type="text" id="full-name" name="full name input" placeholder="Full name">
+    </div>
+    <div class="floated-label-wrapper">
+      <label for="pass">Phone #</label>
+      <input type="password" id="pass" name="password input" placeholder="Phone number">
+    </div>
+    <input class="button expanded" type="submit" value="Save">
+  </form>
+
+
+  {{!--Footer--}}
+  <div class="columns pulse-footer" data-sticky-container data-stick-to="bottom">
+    <div class="row">
+      <div class="column">
+        <p>© Pulse / All Rights Reserved.</p>
+      </div>
     </div>
   </div>
 </div>
