separated css files, created html files

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,4 @@
-{{!--Mobile UI Begin--}} {{!--Navbar--}} {{!--
-
-<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>--}} {{!--
-<a href="#" onclick="signOut();">Sign out</a>--}}
+{{!--Navbar--}}
 
 <!-- Set up Off-canvas -->
 <div id="wrapper">
@@ -64,8 +61,7 @@
     <h4 id="welcome"></h4>
     {{!--Begin New Activity Button--}}
     <a class="button app-button" href="#">Begin New Activity</a>
-    <br> {{!--PULSE BUTTON!!!--}} {{!--
-    <button class="button button-rounded-hover"><i class="fa fa-ravelry" aria-hidden="true"></i></button>--}}
+    <br> {{!--PULSE BUTTON!!!--}}
     <button id="pulse-button" class="button button-rounded-hover"><img src="../assets/images/radio2.png"></button>
   </div>
   {{!--Profile Form--}}
