added avatar placeholder in menu, separated css files, created profile form and contact form with the ability to dynamically add more contacts

--- a/public/assets/css/button.css
+++ b/public/assets/css/button.css
@@ -82,3 +82,28 @@
     transform: translateX(0%);
     opacity: 0.25;
 }
+
+/*------------------Add Contact Button------------------*/
+
+#add-contact-button {
+
+}
+
+/*.plus-minus-input {
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.plus-minus-input .input-group-field {
+  text-align: center;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 1rem;
+}
+
+.plus-minus-input .input-group-field::-webkit-inner-spin-button,
+.plus-minus-input .input-group-field ::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+          appearance: none;
+}*/
