--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -14,13 +14,14 @@
     padding: 0 0.25rem;
     position: absolute;
     top: 2rem;
-    transition: all 0.15s ease-in;
+    transition: atransitionll 0.15s ease-in;
     z-index: -1;
 }
 
 .floated-label-wrapper label input[type=text],
 .floated-label-wrapper label input[type=email],
-.floated-label-wrapper label input[type=password] {
+.floated-label-wrapper label input[type=password],
+.floated-label-wrapper label input[type=tel] {
     border-radius: 4px;
     font-size: 1.75em;
     padding: 0.5em;
@@ -34,5 +35,25 @@
 }
 
 #profile-form {
-    margin-bottom: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+}
+
+.contact-form {
+
+}
+
+.remove_field {
+    
+}
+
+.remove_field:hover {
+    background-color: red;
+    transition: all 0.15s ease 0s;
+
+}
+
+.remove-button {
+    
 }
