--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,9 @@ html {
 
 body {
     height: 100%;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 80px;
     /*background-image: url("https://www.toptal.com/designers/subtlepatterns/topography/");*/
     /*background-image: url("../images/topography.png");*/
     /*background-image: url("../images/cream_pixels.png");*/
@@ -17,20 +20,46 @@ body {
 #wrapper {
     min-height: 100%;
     position: relative;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -60px;
 }
-
 
 /*------------------Footer------------------*/
 
-.pulse-footer {
+#pulse-footer {
     height: 60px;
     width: 100%;
     background: #222b31;
     color: rgba(254, 254, 254, 0.6);
-    margin-bottom: 0;
     text-align: center;
     padding: 1rem 0 0;
     position: absolute;
     left: 0px;
-    bottom: 0px;
+}
+
+.push {
+    height: 60px;
+}
+
+/*------------------Avatar------------------*/
+
+.avatar-wrapper {
+    padding-left: 16px;
+}
+
+.avatar {
+    float: left;
+    margin-top: 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    position: relative;
+
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+
+    -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
+    box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
 }
