--- a/public/views_to_refactor/assets/css/button.css
+++ b/public/views_to_refactor/assets/css/button.css
@@ -69,9 +69,11 @@
     justify-content: center;
     width: 20rem;
     height: 60px;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
     opacity: .7;
+    margin-top: 10px;
     margin: auto;
+    overflow: hidden;
 }
 
 #sign-in-button span {
