--- a/public/views_to_refactor/assets/css/splash.css
+++ b/public/views_to_refactor/assets/css/splash.css
@@ -4,12 +4,12 @@
     display: flex;
     z-index: 50;
     position: relative;
-    top: 25%;
+    top: 35%;
     width: 100%;
     justify-content: center;
     text-align: center;
+    vertical-align: middle;
     color: #fff;
-    margin-bottom: 10px;
 }
 
 
