--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-Mobile UI Begin
+{{!--Mobile UI Begin
 {{!--Navbar--}} {{!--
 
 <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>--}} {{!--
@@ -76,4 +76,4 @@ Mobile UI Begin
       <p>© Pulse / All Rights Reserved.</p>
     </div>
   </div>
-</div>
+</div>--}}
